--- a/src/app/home/edit-modal/edit-modal.component.scss
+++ b/src/app/home/edit-modal/edit-modal.component.scss
@@ -3,3 +3,14 @@
     font-size:30px;
     color:rgb(255, 196, 0);
 }
+
+//classes for the flags
+
+.borderToFlag {
+  border-bottom: 2px solid green;
+  opacity: 1;
+}
+
+.removeOpacity {
+  opacity: 0.5;
+}
