--- a/src/app/home/add-modal/add-modal.component.html
+++ b/src/app/home/add-modal/add-modal.component.html
@@ -24,7 +24,7 @@
             <div slot="start" style="padding-top: 12px">
               <img
                 [ngClass]="[ currentLanguageText ===  'el' ? 'borderToFlag' : '' ,
-                currentLanguageText ==='en' ? 'removeOpacity' : '' ]"
+                !question.text_translations.el  ? 'removeOpacity' : ''  ]"
                 style="cursor: pointer; padding: 3px"
                 src="https://data.deliverymanager.gr/flag-el.png"
                 width="30px"
@@ -33,7 +33,7 @@
               />
               <img
               [ngClass]="[ currentLanguageText ===  'en' ? 'borderToFlag' : '',
-              currentLanguageText ==='el' ? 'removeOpacity' : '' ]"
+              !question.text_translations.en  ? 'removeOpacity' : ''  ]"
                 style="cursor: pointer; padding: 3px"
                 src="https://data.deliverymanager.gr/flag-en.png"
                 width="30px"
@@ -87,7 +87,7 @@
             <ion-label position="floating">{{
               "reviews-create-questionnaire.select-type" | translate
             }}</ion-label>
-            <ion-select [(ngModel)]="question.type">
+            <ion-select (ionChange) = "createArray()" [(ngModel)]="question.type">
               <ion-select-option value="text">{{
                 "reviews-create-questionnaire.text" | translate
               }}</ion-select-option>
@@ -101,11 +101,31 @@
           </ion-item>
 
           <ion-item *ngIf="question.type === 'radio'">
+            <div slot="start" style="padding-top: 12px">
+              <img
+                [ngClass]="[ currentLanguageAnswer ===  'el' ? 'borderToFlag' : '' ,
+                !question.text_translations.el  ? 'removeOpacity' : '' ]"
+                style="cursor: pointer; padding: 3px"
+                src="https://data.deliverymanager.gr/flag-el.png"
+                width="30px"
+                height="30px"
+              (click) = "setCurrentLanguageAnswerSelection('el')"
+              />
+              <img
+              [ngClass]="[ currentLanguageAnswer ===  'en' ? 'borderToFlag' : '',
+              !question.text_translations.en ? 'removeOpacity' : '' ]"
+                style="cursor: pointer; padding: 3px"
+                src="https://data.deliverymanager.gr/flag-en.png"
+                width="30px"
+                height="30px"
+                (click) = "setCurrentLanguageAnswerSelection('en')"
+              />
+            </div>
             <ion-label position="floating">{{
               "reviews-create-questionnaire.write-answer" | translate
             }}</ion-label>
             <ion-input
-              [(ngModel)]="answer"
+            [(ngModel)]="question.text"
               name="answerInput"
               #answerInput="ngModel"
             ></ion-input>
